Trying to fix mobile whitespace issue

--- a/src/_includes/assets/css/app.scss
+++ b/src/_includes/assets/css/app.scss
@@ -15,6 +15,12 @@ body {
     .nav-link:hover {
         color: $mainColour !important;
     }
+
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
 }
 
 .active{
